welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code

def haveBaggle():Boolean = {
    if (estSurBiscuit() == true) {
        return true;
        /* interdit d'écrire du code ici */
    }
    /* même ici, oubliez */
}


